--- a/resources/View/MovieView.fxml
+++ b/resources/View/MovieView.fxml
@@ -1,31 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="276.0" prefWidth="247.0" vgap="10" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.mrs.GUI.Controller.MovieViewController">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+<AnchorPane prefHeight="324.0" prefWidth="591.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.mrs.GUI.Controller.MovieViewController">
    <children>
-      <ListView fx:id="lstMovies" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-      <TextField fx:id="txtMovieSearch" GridPane.rowIndex="1" />
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <GridPane alignment="center" hgap="10" prefHeight="276.0" prefWidth="309.0" vgap="10">
+         <columnConstraints>
+            <ColumnConstraints />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
          <children>
-            <TextField fx:id="txtTitle" prefHeight="26.0" prefWidth="92.0" promptText="Title" />
-            <TextField fx:id="txtYear" prefHeight="26.0" prefWidth="95.0" promptText="Year" />
-            <Button fx:id="btnCreate" mnemonicParsing="false" onAction="#createNewMovie" text="Create" />
+            <ListView fx:id="lstMovies" prefHeight="200.0" prefWidth="291.0" GridPane.rowIndex="2" />
+            <TextField fx:id="txtMovieSearch" promptText="Type search filter here" GridPane.rowIndex="1" />
+            <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <TextField fx:id="txtTitle" prefHeight="26.0" prefWidth="153.0" promptText="Title" />
+                  <TextField fx:id="txtYear" prefHeight="26.0" prefWidth="60.0" promptText="Year" />
+                  <Button fx:id="btnCreate" mnemonicParsing="false" onAction="#createNewMovie" text="Create" />
+               </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </HBox>
          </children>
-      </HBox>
+      </GridPane>
+      <TableView fx:id="tblMovies" layoutX="341.0" layoutY="5.0" prefHeight="275.0" prefWidth="223.0">
+         <columns>
+            <TableColumn fx:id="colTitle" prefWidth="75.0" text="Title" />
+            <TableColumn fx:id="colYear" prefWidth="75.0" text="Year" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button fx:id="btnDelete" layoutX="511.0" layoutY="287.0" mnemonicParsing="false" onAction="#deleteMovie" text="Delete" />
+      <Button fx:id="btnUpdate" layoutX="8.0" layoutY="282.0" mnemonicParsing="false" onAction="#updateMovie" text="Update" />
    </children>
-</GridPane>
+</AnchorPane>
